[package]
name = "sa_cleaner"
version = "1.0.0"
edition = "2021"
authors = ["Seif Afandi"]
description = "SA Cleaner v1.0 - By Seif Afandi (Resizable + Dark Mode)"
build = "build.rs"

[dependencies]

[build-dependencies]
cc = "1.2"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = true
codegen-units = 1
